Feat: Add Global Payroll Excel Export

--- a/app/frontend/templates/employee_report.html
+++ b/app/frontend/templates/employee_report.html
@@ -27,6 +27,13 @@
           <i class="fa-solid fa-search"></i> Afficher Rapport
         </button>
       </div>
+      <!-- NEW: Excel Download Button -->
+      <div class="form-group" style="margin-left: auto;">
+        <label>&nbsp;</label>
+        <a href="{{ '/reports/export/payroll' }}" class="btn btn-success" target="_blank">
+          <i class="fa-solid fa-file-excel"></i> Télécharger Paie Global
+        </a>
+      </div>
     </div>
   </form>
 </div>
