Fix: Remove leading slashes from static URL paths for cloud compatibility

--- a/app/frontend/templates/base.html
+++ b/app/frontend/templates/base.html
@@ -13,12 +13,11 @@
     crossorigin="anonymous" referrerpolicy="no-referrer">
 
 
-  <link rel="stylesheet" href="{{ url_for('static', path='/fontawesome/css/all.min.css') }}">
-
+  <link rel="stylesheet" href="{{ url_for('static', path='fontawesome/css/all.min.css') }}">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="{{ url_for('static', path='/styles.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', path='styles.css') }}">
 
   <link rel="icon" type="image/png" sizes="96x96" href="{{ url_for('static', path='/favicon-96x96.png') }}">
   <link rel="icon" type="image/svg+xml" href="{{ url_for('static', path='/favicon.svg') }}">
