fix(giveaway): add cache buster to javascript include to ensure new error alerts propagate to client

--- a/app/frontend/templates/giveaway.html
+++ b/app/frontend/templates/giveaway.html
@@ -313,5 +313,5 @@
     </div>
 </div>
 
-<script src="{{ url_for('static', path='giveaway.js') }}"></script>
+<script src="{{ url_for('static', path='giveaway.js') }}?v=2.1"></script>
 {% endblock %}
